# sfctools

./: .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  readthedocs.yaml
docs/: requirements.txt
docs/source/: conf.py  index.rst  literature_architecture.bib
docs/source/doc_framework/: agents.rst  automation.rst  datastructs.rst  flowmatrix.rst  markets.rst  miscellaneous.rst  world_settings.rst
examples/: test.py
examples/balance-sheet/: balance.py
examples/basic-example/: basic-example.py  my_settings.yml
examples/cliffbruten/: buyer.py  info.md  main.py  market.py  seller.py  shout.py  trader.py
examples/cross-correlation/: correlation.py
examples/exampleabm/: info.md  model.py  settings.yml
examples/flowmatrix/: flowmatrix.py
examples/marketexample/: market.py
examples/sankeydiagram/: sankey.py
paper/: literature.bib  pandoc test.txt  paper.md
sfctools/: __init__.py
sfctools/automation/: README.md  calibration.py  cgesolver.py  runner.py
sfctools/bottomup/: matching.py  productiontree.py  stock_manager.py  treestruct.py
sfctools/core/: agent.py  clock.py  custom_warnings.py  flow_matrix.py  settings.py  singleton.py  world.py
sfctools/datastructs/: balance.py  bank_order_book.py  cash_flow_statement.py  collection.py  income_statement.py  inventory.py  market_registry.py  matrixstruct.py  shiftlog.py  signalslot.py  worker_registry.py
sfctools/gui/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  attune_main.py  attune_starter.py
sfctools/misc/: mpl_plotting.py  reporting_sheet.py  timeseries.py
(+39 files in other folders)
